src/objects/Equipment__c.object
<CustomObject>
    <fields>
        <fullName>All_Time_Average__c</fullName>
        <label>All Time Average</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>All_Time_Max__c</fullName>
        <label>All Time Max</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>All_Time_Min__c</fullName>
        <label>All Time Min</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <label>Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Equipment</relationshipLabel>
        <relationshipName>Equipment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MeterURL__c</fullName>
        <label>MeterURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Average__c</fullName>
        <label>Most Recent Average</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PointURL__c</fullName>
        <label>PointURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Point_Format__c</fullName>
        <label>Point Format</label>
        <picklist>
            <picklistValues>
                <fullName>kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kWh</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Electric Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chilled Water Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuel Oil Commercial Heating Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuel Oil Home Heating Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuel Oil Residual Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heating Hot Water Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquid Propane Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Gas Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steam Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Meter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Equipment</label>
    <nameField>
        <displayFormat>EQ-{00000000}</displayFormat>
        <label>Equipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>